[package]
name = "xml2csv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

quickxml_to_serde = { version = "0.4", features = ["json_types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.0"
log4rs = "1.0.0"
rayon = "1.5.1"

jwalk = "0.6"
uuid = {version = "0.8", features = ["serde", "v4"]}
csv = "1.2"
serde_with = "2.3.2"

# for db
chrono = "0.4.19"
once_cell = "1.8.0"

[dependencies.mongodb]
default-features = false
features = ["sync"]
version = "2.0.0"